fix: right white space issue

--- a/styles/components/Project.module.css
+++ b/styles/components/Project.module.css
@@ -3,6 +3,8 @@
   padding-top: 0;
   margin: 0 auto;
   max-width: 72rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .projects {
@@ -62,9 +64,8 @@
 }
 
 .projectsWrapper > button {
-  margin: 2rem 50%;
-  transform: translateX(-50%);
-  width: max-content;
+  margin: 2rem 0;
+  align-self: center;
   background: transparent;
   padding: 0.8rem 1rem;
   border-radius: 4px;
